--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body class="bg-slate-900">
-    <h1 class="text-white">good morning</h1>
+<body class="bg-slate-900 grid place-content-center h-screen">
+    <h1 class="text-yellow-500 text-4xl my-3">good morning</h1>
+    <div>
+        <div class="p-6 max-w-sm mx-auto bg-white rounded-xl">
+            <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/7/76/Physics_wallah_logo.jpg" alt="image not found" >
+            </div>
+            <div>
+                <div>
+                    tailwind css
+                    <p>by patel vishal</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
